added about page

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
         <title>Sample HTML Page</title>
         <h1>Hello, World!</h1>
         <p>This is a sample HTML page.</p>
+        <a href="about.html">About Me</a>
     </head>
 </html>
