added hobbies, changed nav

--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <html>
     <head>
+        <a href="index.html">Home</a>
         <title>About Me</title>
     </head>
-    <p>hello there</p>
+    <p>Hi! My name is Kevin and I'm a Senior in the CSSE major at UWB. I'm from Honolulu, HI. I would add more, but the content is not really what's important here.</p>
 
-    <a href="index.html">Go back to Home</a>
+    
 </html>
