--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
-        <title>Sample HTML Page</title>
-        <h1>Hello, World!</h1>
-        <p>This is a sample HTML page.</p>
+        <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
+        <a href="hobbies.html">Hobbies</a>
+        <title>About Kevin Li</title>
+        <h1>Hello, everyone</h1>
+        <p>This HTML page includes some stuff about me. Use the links above to navigate to learn more about me</p>
+        
     </head>
 </html>
