--- a/about.html
+++ b/about.html
@@ -5,7 +5,16 @@
         <a href="hobbies.html">Hobbies</a>
         <title>About Me</title>
     </head>
-    <p>Hi! My name is Kevin and I'm a Senior in the CSSE major at UWB. I'm from Honolulu, HI. I would add more, but the content is not really what's important here.</p>
+    <p>Hi! My name is Kevin and I'm a Senior in the <abbr title="Computer Science & Software Engineering">CSSE</abbr> major at UWB. I'm from Honolulu, HI. I would add more, but the content is not really what's important here.</p>
+
+    <section>
+        <h1>My Current Classes</h1>
+        <ul>
+            <li>CSS 337 - Secure Systems</li>
+            <li>CSS 481 - Web Programming & Applications</li>
+            <li>CSS 370 - Design & Analysis</li>
+        </ul>
+    </section>
 
 
     
