--- a/hobbies.html
+++ b/hobbies.html
@@ -6,10 +6,10 @@
         <title>Hobbies</title>
         <body>
             <p>One of my hobbies is basketball, and I absolutely <em>love</em> the <strong>Portland Trailblazers</strong>. I watch every single game. Here is a picture of me at a recent game.</p>
-            <img src="IMG_0943.JPG" alt="Me at a Portland Trailblazers game">
+            <img src="IMG_0943.JPG" alt="Me at a Portland Trailblazers game" width="315" height="500">
 
             <p>Here is a video of the game I attended.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=laUIMGQCz3s" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/laUIMGQCz3s" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
 
             <h1>My Favorite Players</h1>
             <table>
