--- a/about.html
+++ b/about.html
@@ -1,14 +1,18 @@
 <html>
     <head>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="hobbies.html">Hobbies</a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="hobbies.html">Hobbies</a>
+        </nav>
+        
         <title>About Me</title>
     </head>
+    <h1>About Me</h1>
     <p>Hi! My name is Kevin and I'm a Senior in the <abbr title="Computer Science & Software Engineering">CSSE</abbr> major at UWB. I'm from Honolulu, HI. I would add more, but the content is not really what's important here.</p>
 
     <section>
-        <h1>My Current Classes</h1>
+        <h2>My Current Classes</h2>
         <ul>
             <li>CSS 337 - Secure Systems</li>
             <li>CSS 481 - Web Programming & Applications</li>
