--- a/hobbies.html
+++ b/hobbies.html
@@ -1,17 +1,20 @@
 <html>
     <head>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="hobbies.html">Hobbies</a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="hobbies.html">Hobbies</a>
+        </nav>
         <title>Hobbies</title>
+        <h1>Hobbies</h1>
         <body>
             <p>One of my hobbies is basketball, and I absolutely <em>love</em> the <strong>Portland Trailblazers</strong>. I watch every single game. Here is a picture of me at a recent game.</p>
             <img src="IMG_0943.JPG" alt="Me at a Portland Trailblazers game" width="315" height="500">
 
             <p>Here is a video of the game I attended.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/laUIMGQCz3s" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/laUIMGQCz3s?si=U9WDFOUKJBC32cUo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-            <h1>My Favorite Players</h1>
+            <h2>My Favorite Players</h2>
             <table>
                 <tr>
                     <th>Player Name</th>
