--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
     <head>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="hobbies.html">Hobbies</a>
-        <title>About Kevin Li</title>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="hobbies.html">Hobbies</a>
+        </nav>
+        <title>Kevin Li</title>
         <h1>Hello, everyone</h1>
         <p>This HTML page includes some stuff about me. Use the links above to navigate to learn more about me</p>
         
