--- a/hobbies.html
+++ b/hobbies.html
@@ -18,7 +18,7 @@
         <video width="560" height="315" controls>
             <source src="IMG_1103.MOV" type="video/mp4">
             Your browser does not support the video tag.
-
+        </video>
         <p>Here is the recap of the game I attended. Source: <cite>NBA Official YouTube Channel</cite></p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/laUIMGQCz3s?si=U9WDFOUKJBC32cUo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h2>My Favorite Players</h2>
