--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <title>About Me</title>
     </head>
-    <nav>
+    <body>
+        <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
             <a href="hobbies.html">Hobbies</a>
@@ -34,6 +35,7 @@
     <footer>
         <p>My Website</p>
     </footer>
+    </body>
 
 
     
