--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Kevin Li</title>
     </head>
+    <body>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
@@ -15,4 +16,5 @@
     <footer>
         <p>My Website</p>
     </footer>
+    </body>
 </html>
