--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
                 <li><a href="hobbies.html">Hobbies</a></li>
             </ul>
         </nav>
-        <h1>Hello, everyone</h1>
-        <p>This HTML page includes some stuff about me. Use the links above to navigate to learn more about me</p>
+        <section>
+            <h1>Hello, everyone</h1>
+            <p>This HTML page includes some stuff about me. Use the links above to navigate to learn more about me</p>
+        </section>
+        
 
     <footer>
         <p>My Website</p>
