change banana size

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
 
         <div class="gif-box">
-            <img src="bananagif.gif" alt="a dancing banana gif">
+            <img class="banana"  src="bananagif.gif" alt="a dancing banana gif">
         </div>
         
 
